--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color: olive;">
- h1 style="font-size: 45px">Fahim Issifou</h1>
+ <h1 style="font-size: 45px">Fahim Issifou</h1>
  <p><img src="me.jpeg" width="200" height="300"></p>
 
  <p> Born in Bronx, New York I was Created in 2007
@@ -20,3 +20,4 @@
 
   </body>
 </html>
+
